New fonts Added, CSS changed & code refactored

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
     <!-- Custom Style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Landig Page with Counter</title>
+    <title>Landing Page with Counter</title>
 </head>
 
 <body>
@@ -35,14 +35,14 @@
 
                         <h1 class="main-heading">COMING SOON</h1>
 
-                        <p>Learn to code counter application in JavaScript</p>
+                        <p>Counter application in JavaScript</p>
 
                         <div class="counter" id="countdown">
                            
                            <!--need to cut the code from here-->
                             <div class="counter-box">
 
-                                <span class="counter-number">20</span>
+                                <span class="counter-number">5</span>
 
                                 <span class="counter-text">Days</span>
 
@@ -50,14 +50,14 @@
 
                             <div class="counter-box">
 
-                                <span class="counter-number">14</span>
+                                <span class="counter-number">20</span>
 
                                 <span class="counter-text">Hours</span>
 
                             </div>
                             <div class="counter-box">
 
-                                <span class="counter-number">35</span>
+                                <span class="counter-number">10</span>
 
                                 <span class="counter-text">Mins</span>
 
@@ -65,7 +65,7 @@
 
                             <div class="counter-box">
 
-                                <span class="counter-number">42</span>
+                                <span class="counter-number">40</span>
 
                                 <span class="counter-text">Seconds</span>
 
